# ddr-cmdln

./: .gitignore  INSTALL.rst  Makefile  mypy.ini  pyproject.toml  requirements.txt
conf/: ddrlocal.cfg  imagemagick-policy.xml.deb10  imagemagick-policy.xml.deb11  imagemagick-policy.xml.deb12  imagemagick-policy.xml.deb9
ddr/: pyproject.toml  setup.py  tox.ini
ddr/DDR/: __init__.py  archivedotorg.py  batch.py  changelog.py  commands.py  config.py  control.py  converters.py  csvfile.py  docstore.py  dvcs.py  fileio.py  identifier.py  idservice.py  imaging.py  ingest.py  inheritance.py  modules.py  organization.py  search.py  signatures.py  storage.py  test.sh  test_archivedotorg.py  test_batch.py  test_changelog.py  test_commands.py  test_config.py  test_converters.py  test_csvfile.py  test_docstore.py  test_dvcs.py  test_fileio.py  test_identifier.py  test_idservice.py  test_imaging.py  test_ingest.py  test_inheritance.py  test_locking.py  test_models.py  (+23 more)
ddr/DDR/cli/: __init__.py  ddr.py  ddrcheck.py  ddrcheckbinaries.py  ddrcheckencoding.py  ddrconfig.py  ddrdesc.py  ddrexport.py  ddrfar.py  ddrfilter.py  ddriaconvert.py  ddrimport.py  ddrindex.py  ddrinfo.py  ddrinventory.py  ddrnames.py  ddrpubcopy.py  ddrremote.py  ddrsignatures.py  ddrtransform.py  ddrvhfileprep.py  ddrvocab.py
ddr/DDR/converters/: csv.py  display.py  formats.py  forms.py
ddr/DDR/models/: __init__.py  collection.py  common.py  entity.py  files.py  organization.py
ddr/DDR/templates/: changelog.tpl
ddr/requirements/: _base.txt  dev.txt
ddr/tests/: test_archivedotorg.py  test_batch.py  test_changelog.py  test_commands.py  test_config.py  test_converters.py  test_csvfile.py  test_ddriaconvert.py  test_ddrimport.py  test_ddrvhfileprep.py  test_docstore.py  test_dvcs.py  test_fileio.py  test_identifier.py  test_idservice.py  test_imaging.py  test_ingest.py  test_inheritance.py  test_init.py  test_locking.py  test_models.py  test_modules.py  test_signatures.py  test_storage.py  test_util.py  test_vocab.py
ddr/tests/archivedotorg/: ddr-csujad-29-1.json  ddr-csujad-51-1.json  ddr-densho-1020-13.json  ddr-densho-400-1.json  mv.sh
ddr/tests/ddrimport/: ddrimport-entity-new.csv  ddrimport-file-new.csv  ddrimport-file-update.csv  ddrimport-files-import-external-emptyhashes-nofile.csv  ddrimport-files-import-external-emptyhashes.csv  ddrimport-files-import-external-nohashes-nofile.csv  ddrimport-files-import-external.csv  (+4 more)
src/: pyproject.toml
src/DDR/: archivedotorg.py  batch.py  changelog.py  commands.py  config.py  control.py  docstore.py  dvcs.py  identifier.py  idservice.py  imaging.py  locking.py  organization.py  storage.py  vocab.py
src/tests/: test_commands.py  test_ddrimport.py  test_init.py
tests/: test_archivedotorg.py  test_config.py  test_ddrimport.py  test_docstore.py  test_dvcs.py  test_imaging.py  test_inheritance.py  test_modules.py  test_signatures.py  test_storage.py
tests/archivedotorg/: ddr-densho-122-10-1.json  ddr-densho-122-4-1.json
tests/ddrimport/: ddrimport-entity-update.csv  ddrimport-files-import-external-nohashes-nofile.csv
(+10 files in other folders)
